# MetroTools

./: .gitignore  CMakeLists.txt  MetroEX_QT.pro  MetroEX_QT.vcxproj  MetroEX_QT.vcxproj.filters  MetroME.sln  README.md  clearvc.bat  compile_shaders.bat  cpp.hint  setup.iss  tovcproj.bat
apps/MetroEX/: CMakeLists.txt  encoding.cpp
apps/MetroEX/res/: resources.qrc
apps/MetroEX/ui/: imageinfopanel.cpp  imageinfopanel.h  imageinfopanel.ui  imagepanel.cpp  maintoolbar.cpp  maintoolbar.h  maintoolbar.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelinfopanel.cpp  modelinfopanel.h  renderpanel.cpp  renderpanel.h
apps/MetroME/: CMakeLists.txt  MetroME.vcxproj  MetroME.vcxproj.filters  MetroSessions.cpp  MetroSessions.h  ModelAOCalculator.cpp  ModelLODBuilder.cpp  res.rc
apps/MetroME/res/: resources.qrc
apps/MetroME/src/: Application.cpp
apps/MetroME/ui/: edittpresetsdlg.cpp  edittpresetsdlg.h  edittpresetsdlg.ui  exportfbxdlg.cpp  exportfbxdlg.h  exportfbxdlg.ui  exportmodeldlg.cpp  exportmodeldlg.h  exportmodeldlg.ui  mainribbon.cpp  mainribbon.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderpanel.cpp  renderpanel.h  sessionsdlg.cpp  sessionsdlg.h  sessionsdlg.ui
apps/MetroPAK/: CMakeLists.txt  main.cpp  metropackunpack.cpp  metropackunpack.h  res.rc
apps/MetroPAK/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
apps/MetroTEX/: CMakeLists.txt  main.cpp  res.rc
apps/MetroTEX/res/: resources.qrc
apps/MetroTEX/ui/: MetroTextureInfoData.h  addtexturewnd.cpp  addtexturewnd.h  addtexturewnd.ui  imagepanel.cpp  imagepanel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  objectpropertybrowser.cpp
libs/: CMakeLists.txt
libs/GeometricTools/GTE/: CMakeLists.txt
libs/MetroMEControls/: FileToUIElementConverter.cs  IconsResDict.xaml  MetroMEControls.csproj  UserControl1.xaml  UserControl1.xaml.cs
libs/MetroMEControls/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
libs/MetroMEControls/controls/: HwndControl.cs  RenderPanel.cs
libs/MetroMEControls/helpers/: WPFSizeConvertion.cs  WinApi.cs
libs/MetroMEControls/windows/: AboutWnd.xaml  AboutWnd.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
libs/QtPropertyBrowser/: CMakeLists.txt
libs/QtPropertyBrowser/src/: CMakeLists.txt  qteditorfactory.cpp  qtpropertybrowserutils.cpp  qtpropertymanager.cpp  qtvariantproperty.cpp
libs/crunch/crunch/: crunch.2008.vcxproj
libs/crunch/inc/: crn_decomp.h
libs/imgui/: imconfig.h
libs/jansson/src/: dump.c
libs/multitoolbox/: CMakeLists.txt  COPYING  README  multitoolbox.cpp  multitoolbox.h  multitoolbox.pri  multitoolbox.qrc  multitoolbox.ui  titlebutton.cpp  titlebutton.h
libs/nodeeditor/: CMakeLists.txt
libs/nodeeditor/src/: ConnectionPainter.cpp  ConnectionStyle.cpp  FlowScene.cpp
libs/physx34/lib/: LowLevel.lib  LowLevelAABB.lib  LowLevelCloth.lib  LowLevelDynamics.lib  LowLevelParticles.lib  PhysX3Common_x64.exp  PhysX3Common_x64.lib  PhysX3Common_x64.map  PhysX3Cooking_x64.exp  PhysX3Cooking_x64.lib  PhysX3Cooking_x64.map  PhysX3_x64.exp  PhysX3_x64.lib  PxFoundation_x64.exp  PxFoundation_x64.lib  PxPvdSDK_x64.exp  PxPvdSDK_x64.lib  PxTask_x64.lib
libs/quicklz/: manual.html  quicklz.h
libs/tbb/: .gitignore
src/common/: CMakeLists.txt  dds_utils.cpp  dds_utils.h  hashing.cpp  log.cpp  log.h  mex_settings.cpp  mex_settings.h  mycommon.h  mymath.h  random.cpp
src/engine/: Animator.cpp  Animator.h  CMakeLists.txt  Camera.cpp  Camera.h  DebugGeo.cpp  DebugGeo.h  EngineTypes.h  LevelGeo.cpp  LevelGeo.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  RendererTypes.inl  ResourcesManager.cpp  ResourcesManager.h  Scene.cpp  Scene.h  Spawner.cpp  Spawner.h  Surface.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h
src/engine/scenenodes/: DebugGeoNode.cpp  DebugGeoNode.h  LevelGeoNode.cpp  LevelGeoNode.h  ModelNode.cpp  ModelNode.h  SceneNode.cpp  SceneNode.h
src/engine/shaders/: CMakeLists.txt  Common.hlsli  ConstantBuffers.hlsli  GS_DebugGenNormals.hlsl  PS_Debug.hlsl  PS_Debug.hlsl.h  PS_DebugLit.hlsl  PS_Default.hlsl  PS_Default.hlsl.h  PS_DeferredDebug.hlsl  PS_DeferredResolve.hlsl  PS_DeferredResolve.hlsl.h  PS_Selection.hlsl  PS_Selection.hlsl.h  PS_Terrain.hlsl  PS_Terrain.hlsl.h  VS_Debug.hlsl  VS_Debug.hlsl.h  VS_DebugPassthrough.hlsl  VS_FullscreenTriangle.hlsl  VS_FullscreenTriangle.hlsl.h  VS_Level.hlsl  VS_Level.hlsl.h  VS_Skinned.hlsl  VS_Skinned.hlsl.h  VS_Soft.hlsl  VS_Static.hlsl  VS_Static.hlsl.h  VS_Terrain.hlsl  VS_Terrain.hlsl.h  VertexCommon.hlsli  all_shaders.h
src/exporters/: CMakeLists.txt  ExporterFBX.cpp  ExporterFBX.h  ExporterGLTF.cpp  ExporterGLTF.h  ExporterOBJ.cpp  ExporterOBJ.h
src/importers/: CMakeLists.txt  ImporterFBX.cpp  ImporterFBX.h  ImporterOBJ.cpp  ImporterOBJ.h
src/metro/: CMakeLists.txt  MetroBinArchive.cpp  MetroBinArchive.h  MetroBinArrayArchive.cpp  MetroCompression.cpp  MetroCompression.h  MetroConfigDatabase.cpp  MetroConfigDatabase.h  MetroConfigNames.h  MetroContext.cpp  MetroContext.h  MetroFileSystem.cpp  MetroFileSystem.h  MetroFonts.cpp  MetroFonts.h  MetroLevel.cpp  MetroLevel.h  MetroLightProbe.cpp  MetroLightProbe.h  MetroLocalization.cpp  MetroModel.cpp  MetroModel.h  MetroMotion.cpp  MetroMotion.h  MetroSkeleton.cpp  MetroSkeleton.h  MetroTexture.cpp  MetroTexture.h  MetroTexturesDatabase.cpp  MetroTexturesDatabase.h  MetroTypes.h  MetroWeaponry.cpp  MetroWeaponry.h  VFIReader.cpp  VFIReader.h  VFXReader.cpp  VFXReader.h
src/metro/entities/: MetroEntitiesFactory.cpp  MetroEntitiesFactoryInterface.h  MetroEntity.cpp  MetroEntity.h  MetroEntityFactory.cpp  MetroEntityFactory.h  MetroUObject.cpp  MetroUObject.h
src/metro/physics/: MetroPhysics.cpp  MetroPhysics.h  MetroPhysicsCForm.inl  MetroPhysicsJoints.inl  MetroPhysicsShapes.inl
src/metro/reflection/: MetroReflection.cpp  (+4 more)
src/physx/: CMakeLists.txt  physxucommon.h
src/simpleribbon/: CMakeLists.txt  SimpleRibbon.cpp  SimpleRibbon.h  SimpleRibbonButton.cpp  SimpleRibbonButton.h  SimpleRibbonGroup.cpp  SimpleRibbonGroup.h  SimpleRibbonTab.cpp  SimpleRibbonTab.h  SimpleRibbonVBar.cpp  SimpleRibbonVBar.h
(+84 files in other folders)
